# Earth-Viz

./: .eslintrc.json  .gitignore  .prettierrc  README.md  ]  build_package.ps1  expand.js  mime.types  package-lock.json  package.json  run-micro-tests.ps1  run-products-test.ps1  start-earth.bat  start-earth.ps1  start_earth.ps1  test-modern.html  vite.config.js  vite.micro-test.config.js  vite.products-test.config.js
backend/: .gitignore  .npmignore  README.md  grib_service.py  (+14 more)
earth_viz_backend/: .gitignore  README.md  build.bat  config.py  package-lock.json  pyproject.toml  standalone_server.py  start.bat
earth_viz_backend/earth_viz_backend-0.1.0/src/earth_viz_backend/static/core/: Globes.d.ts
earth_viz_backend/src/earth_viz_backend/: __init__.py  config_loader.py  earth_control.py  earth_viz_api.py  main.py  setup.py
earth_viz_backend/src/earth_viz_backend/services/: cloud_generator.py  cloud_scheduler.py  grib_service.py  live_cloud_service.py
earth_viz_backend/src/earth_viz_backend/shaders/: compose_clouds.glsl  fullscreen.vert  process_clouds.glsl
earth_viz_backend/src/earth_viz_backend/static/: index.d.ts  index.d.ts.map  index.html  index.js  index.js.map  main.js  main.js.map
earth_viz_backend/src/earth_viz_backend/static/assets/: index-DaU4XzVz.css  index-pcf0NqqL.js  index-r0_bQAPO.js
earth_viz_backend/src/earth_viz_backend/static/components/: MenuSystem.d.ts  MenuSystem.d.ts.map  MenuSystem.js  MenuSystem.js.map
earth_viz_backend/src/earth_viz_backend/static/config/: ConfigManager.d.ts  ConfigManager.d.ts.map  ConfigManager.js  ConfigManager.js.map
earth_viz_backend/src/earth_viz_backend/static/core/: Earth.d.ts  Earth.d.ts.map  Earth.js  Earth.js.map  EarthAPI.d.ts  EarthAPI.d.ts.map  EarthAPI.js  EarthAPI.js.map  Globes.d.ts.map  Globes.js  Globes.js.map
earth_viz_backend/src/earth_viz_backend/static/data/: Products.d.ts  Products.d.ts.map  Products.js  Products.js.map
earth_viz_backend/src/earth_viz_backend/static/renderers/: MeshSystem.d.ts  MeshSystem.d.ts.map  MeshSystem.js  MeshSystem.js.map  OverlaySystem.d.ts  OverlaySystem.d.ts.map  OverlaySystem.js  OverlaySystem.js.map  Particles.d.ts  Particles.d.ts.map  Particles.js  Particles.js.map  PlanetSystem.d.ts  PlanetSystem.d.ts.map  PlanetSystem.js  PlanetSystem.js.map  RenderSystem.d.ts  RenderSystem.d.ts.map  RenderSystem.js  RenderSystem.js.map
earth_viz_backend/src/earth_viz_backend/static/services/: InputHandler.d.ts  InputHandler.d.ts.map  InputHandler.js  InputHandler.js.map  WeatherDataService.d.ts  WeatherDataService.d.ts.map  WeatherDataService.js  WeatherDataService.js.map  WebGLMeshRenderer.d.ts  WebGLMeshRenderer.d.ts.map  WebGLMeshRenderer.js  WebGLMeshRenderer.js.map  WebGLRenderer.d.ts  WebGLRenderer.d.ts.map  WebGLRenderer.js  WebGLRenderer.js.map  WebGLSystem.d.ts  WebGLSystem.d.ts.map  WebGLSystem.js  WebGLSystem.js.map
earth_viz_backend/src/earth_viz_backend/static/utils/: Utils.d.ts  Utils.d.ts.map  Utils.js  Utils.js.map
(+121 files in other folders)
