[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earth_viz"
version = "0.0.198"
authors = [
    {name = "Edward Catley", email = "edward.catley@catley.com"},
]
description = "Earth Visualization Backend - FastAPI router for weather data and earth imagery"
keywords = ["weather", "visualization", "gfs", "meteorology", "earth", "globe", "fastapi", "noaa"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Visualization",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=1.8.0"
]

[project.scripts]
earth-viz-setup = "earth_viz_backend.setup:download_static_files"
earth-viz-server = "earth_viz_backend.main:run_server"


[project.urls]
Homepage = "https://github.com/edcatley/earth"
Repository = "https://github.com/edcatley/earth"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
earth_viz_backend = ["static_images/**/*", "static/**/*"]
